<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    tools:context=".ui.MainActivity"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/sv_log"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_pos_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/pos_id"/>
            <EditText
                android:id="@+id/et_terminal_sn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/terminal_sn"/>
            <Button
                android:id="@+id/btn_registerTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerTerminal"
                android:onClick="registerTerminal"/>
            <Button
                android:id="@+id/btn_queryTerminalList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queryTerminalList"
                android:onClick="queryTerminalList"/>
            <Button
                android:id="@+id/btn_unbindTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unbindTerminal"
                android:onClick="unbindTerminal"/>

            <EditText
                android:id="@+id/et_trans_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_trans_amount"/>

            <EditText
                android:id="@+id/et_tip_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_tip_amount"/>
            <EditText
                android:id="@+id/et_trade_no"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_rade_no"/>

            <EditText
                android:id="@+id/et_other_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:hint="@string/please_input_other_amount"/>

            <EditText
                android:id="@+id/et_old_trace"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:hint="@string/please_input_old_trace"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/et_old_trans_index_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_old_trans_index_code"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/et_old_trans_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_old_transid"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/et_old_trans_rrn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_old_rrn"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/et_old_trans_invoice_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:hint="@string/please_input_old_invoice_number"
                android:imeOptions="actionDone" />

            <Spinner
                android:id="@+id/spinner_trans_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/transaction_type"/>

            <Button
                android:id="@+id/btn_start_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/start_trans"
                android:onClick="startTrans"/>

            <Button
                android:id="@+id/btn_cancel_trans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/end_trans"
                android:onClick="cancel"/>

            <Button
                android:id="@+id/btn_query_trans_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/query_trans_result"
                android:onClick="queryResult"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>